MGDOBR-322: add SlackSource and SourceAction (core + configuration) (#663)